# rust_weather_app

./: .env.sample  .gitignore  Cargo.toml  README.md
src/: enums.rs  main.rs  models.rs  weather.rs  weather_service.rs
src/enums/: weather_description.rs
src/models/: location.rs  weather.rs  weather_synopsis.rs
src/models/weather/: clouds.rs  coord.rs  sys.rs  temperature.rs  weather_synopsis.rs  wind.rs
src/services/: weather_service.rs
