[package]
name = "rust_weather_app"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
dotenvy = "0.15.7"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
